# stayhydated

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  .rumdl.toml  .rustfmt.toml  .typos.toml  Cargo.toml  README.md  justfile  package.json
.cargo/: config.toml
.github/workflows/: gh-pages.yml
crates/stayhydated-dioxus/: Cargo.toml  README.md  build.rs  i18n.toml
crates/stayhydated-dioxus/assets/locales/en-US/: stayhydated-dioxus.ftl
crates/stayhydated-dioxus/assets/locales/fr-FR/: stayhydated-dioxus.ftl
crates/stayhydated-dioxus/assets/locales/zh-CN/: stayhydated-dioxus.ftl
crates/stayhydated-dioxus/src/: cards.css  cards.rs  demo.css  i18n.rs  language_select.rs  layout.css  layout.rs  lib.rs  links.rs  motion.css  motion.rs  navigation.css  project_select.rs  styles.rs  tabs.rs  theme.css
crates/stayhydated-dioxus/src/base/select/: component.rs  mod.rs  style.css
crates/stayhydated-site/: Cargo.toml  README.md
crates/stayhydated-site/src/: lib.rs  route_cache.rs  routing.rs  server.rs  sitemap.rs
crates/stayhydated-xtask/: Cargo.toml  README.md
crates/stayhydated-xtask/src/: book.rs  lib.rs  llms.rs  release.rs  web.rs
web/: .gitignore  Cargo.toml  Dioxus.toml  package.json  preview.ts  tsconfig.json
web/assets/locales/en-US/: web.ftl
web/assets/locales/fr-FR/: web.ftl
web/assets/locales/zh-CN/: web.ftl
web/public/: dx-components-theme.css
web/public/assets/: site.css
web/src/: lib.rs  main.rs
web/src/components/: layout.rs  mod.rs
web/src/pages/: home.rs  mod.rs
web/src/site/: app.rs  constants.rs  i18n.rs  mod.rs  render.rs  routing.rs
xtask/: Cargo.toml
xtask/src/: main.rs
