[package]
name = "xtask"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
stayhydated-xtask = { path = "../crates/stayhydated-xtask" }
web = { path = "../web" }

[lints]
workspace = true
