[package]
name = "stayhydated-site"
description = "Shared site helpers for public repositories"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[features]
default = [  ]
server = [ "dep:dioxus", "dep:dioxus-server" ]

[dependencies]
dioxus = { optional = true, workspace = true }
dioxus-server = { optional = true, workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
